--- a/config.toml
+++ b/config.toml
@@ -19,8 +19,9 @@ highlight_code = true
 # Put all your custom variables here
 
 links = [
-    { title = "GitHub", href = "https://github.com/comradez"},
+    { title = "GitHub", href = "https://github.com/comradez" },
     { title = "Ask Me", href = "https://www.tapechat.net/uu/ma8muL/ZHBR0I2H" },
-    { title = "Mail Me", href = "mailto: chuyan-z19 [at] mails [dot] tsinghua.edu.cn"},
+    { title = "Mail Me", href = "mailto: chuyan-z19 [at] mails [dot] tsinghua.edu.cn" },
+    { title = "My Public Key", href = "https://zcy.moe/my_pub_key.key" },
     { title = "Ayayayaya", href = "https://thwiki.cc/%E5%B0%84%E5%91%BD%E4%B8%B8%E6%96%87" }
 ]
