--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hook"]
 	path = themes/hook
-	url = https://github.com/InputUsername/zola-hook.git
+	url = git@github.com:comradez/zola-hook.git
