--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,9 @@ jobs:
     if: github.ref == 'refs/heads/master'
     steps:
       - name: checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      - name: skip_dubious_check
+        run: git config --global --add safe.directory /github/workspace
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.14.1
         env:
