--- a/config.toml
+++ b/config.toml
@@ -4,8 +4,13 @@ base_url = "https://blog.zcy.moe"
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
 
+default_language = "zh-cn"
+
 # Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+# build_search_index = true
+
+generate_feeds = true
+feed_filenames = ["feed.xml"]
 
 theme = "hook"
 title = "Chris Zhang"
