--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ generate_feeds = true
 feed_filenames = ["feed.xml"]
 
 theme = "hook"
-title = "Chris Zhang"
+title = "茨月的博客"
 
 [markdown]
 # Whether to do syntax highlighting
@@ -28,3 +28,6 @@ links = [
     { title = "Mail Me", href = "mailto: me [at] zcy [dot] moe" },
     { title = "Ayayayaya", href = "https://thwiki.cc/%E5%B0%84%E5%91%BD%E4%B8%B8%E6%96%87" },
 ]
+
+[languages.en]
+title = "Chris Zhang's Blog"
